[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emulated_roku"
version = "0.5.0"
description = "Library to emulate the Roku API for Home Assistant and other automation tools."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
  {name = "Marton Perei", email = "marton@perei.me"} 
]
keywords = ["roku", "emulation", "home-assistant", "automation", "aiohttp"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "aiohttp",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-aiohttp",
  "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/martonperei/emulated_roku"
"Bug Tracker" = "https://github.com/martonperei/emulated_roku/issues"

[tool.setuptools.packages.find]
# This ensures setuptools finds the 'emulated_roku' directory in the root
include = ["emulated_roku*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
