[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emulated_roku"
version = "0.5.1"
description = "Library to emulate the Roku API for Home Assistant and other automation tools."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  {name = "Marton Perei", email = "marton@perei.me"} 
]
keywords = ["roku", "emulation", "home-assistant", "automation", "aiohttp"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiohttp",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-aiohttp",
  "pytest-cov",
  "ruff",
  "mypy",
]
release = [
  "build==1.4.0",
  "twine==6.2.0",
]

[project.urls]
"Homepage" = "https://github.com/martonperei/emulated_roku"
"Bug Tracker" = "https://github.com/martonperei/emulated_roku/issues"

[tool.setuptools.packages.find]
# This ensures setuptools finds the 'emulated_roku' directory in the root
include = ["emulated_roku*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "dist"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
show_error_codes = true
